@@ -15,18 +15,18 @@ return array(
 'Logout' => 'Abmelden',
 'Manage' => 'Verwalte',
 'Search' => 'Suche',
-'List' => 'Ãœbersicht von ',
+'List' => 'Übersicht von ',
 'Choose...' => 'Auswahl...',
 'Yes' => 'Ja',
 'No' => 'Nein',
 'Fields with' => 'Felder mit',
 'are required' => 'sind Pflichtfelder',
-'Are you sure to delete this item?'=>'Sind Sie sicher, dass sie dies lÃ¶schen wollen?',
+'Are you sure to delete this item?'=>'Sind Sie sicher, dass sie dies löschen wollen?',
 'Create' => 'Erstelle',
 'Update' => 'Bearbeite',
 'Manage' => 'Verwalte',
 'Save' => 'Speichern',
-'Delete' => 'LÃ¶schen',
+'Delete' => 'Lö¶schen',
 'Operations' => 'Aktionen',
 'Search' => 'Suche',
 'Advanced Search' => 'Erweiterte Suche',
