@@ -4,6 +4,9 @@
 
 Version 0.5
 -----------
+- New: Make Form entries persistant with $_SESSION (thyseus)
+- Chg: Move Relation Widget and CAdvancedArBehavior to extensions folder, not
+components/ anymore because ext.Relation looks better than application.components.Relation and there is no default Path alias for components (thyseus)
 - Chg: Make FullCrud Controller template use Yii::app()->request->getQuery() and ->getPost() (from CHttpRequest unless overridden in application config) to retrieve parameters instead of directly accessing $_GET and $_POST. (Leo R. Lundgren <leo@finalresort.org>) 
 - Fix: Make the Relation widget not add a delimiter after the last field when concatenating multiple fields. (Leo R. Lundgren <leo@finalresort.org>)
 - Fix: A bug in the FullModel template made Gii/Yii look for the CAdvancedArBehavior directly (not via path alias). (Leo R. Lundgren <leo@finalresort.org>)  
